# Robots-everywhere

./: .SensorCode.cc.kate-swp  .gitignore  .main.cc.kate-swp  CMakeCache.txt  CMakeLists.txt  ForceTest.cc  NewSensor.sdf  README.md  SensorCode.cc  build.sh  fast  lazygit  main.cc  rebuild.sh  sim.sh  stupid.sdf  world.sdf
.cache/clangd/index/: main.cc.D313E11C6D880CFE.idx
ForceSubPlugin/: CMakeLists.txt  ForceSubscriberPlugin.cc
RobotModel/: RobotEverywhere.mtl
data/crack2/: location
old/: NewSensor.sdf
ship/: boat.mtl
